[project]
name = "stock-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.2.8",
    "ddgs>=9.7.1",
    "firecrawl-py>=4.6.0",
    "google-genai>=1.49.0",
    "googlesearch-python>=1.3.0",
    "pycountry>=24.6.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "tavily-python>=0.7.12",
    "yfinance>=0.2.66",
]
